# sudoku-solver

./: .gitignore  CMakeLists.txt  LICENSE  exec.sh  sudoku-solver.pro
src/: backtrackingtree.cpp  backtrackingtree.h  main.cpp  sudoku.cpp  sudoku.h
src/header/: backtracktree.h
src/source/: backtracktree.cpp  main.cpp
src/sudoku/: backtrackingtree.h  solver.cpp  solver.h  sudoku.cpp  sudoku.h
test/: CMakeLists.txt  backtrackingtree_test.cpp  solver_test.cpp  sudoku_test.cpp
